[package]
name = "bongoknob"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["ratchet", "nano", "binaris", "h1", "nanoD", "protocol"]
categories = ["hardware-support"]
description = "Nano_D++ Ratchet H1 protocol in Rust"
repository = "https://github.com/coral/bongoknob"

[dependencies]
bytes = "1.7.1"
serialport = { version = "4.5.0", features = ["usbportinfo-interface"] }
thiserror = "1.0.63"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.8.4"
log = "0.4.22"

[dev-dependencies]
anyhow = "1.0.86"
